<resources>
    <string name="app_name">AccountabilityTeam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="me_profile">Me</string>
    <string name="buddy_profile">Buddy</string>
    <string name="title_activity_add_promise">AddPromiseActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_promise_title">Add new promise</string>
    <string name="add_promise_phrase1">I promise to</string>
    <string name="until_textView">until</string>
    <string name="promise_title">Promise</string>
    <string name="promise_description">Description</string>
    <string name="from_textView">from</string>
    <string name="add_stake_hint">What\'s the bet?</string>
    <string name="currency">€</string>
    <string name="stake">Stake</string>

    <string-array name="promises">
        <item>not masturbate</item>
        <item>eat healthy</item>
        <item>study</item>
        <item>not smoke</item>
        <item>sleep</item>
        <item>not drink</item>
        <item>take cold showers</item>
        <item>meditate</item>
    </string-array>

</resources>
